[gd_scene load_steps=28 format=3 uid="uid://djurd6bltqyom"]

[ext_resource type="Script" path="res://alien.gd" id="1_qk2m3"]
[ext_resource type="Texture2D" uid="uid://djsdv6jugy4ab" path="res://assets/spritesheet.png" id="2_eyvl2"]
[ext_resource type="Texture2D" uid="uid://dens33sp3bwxl" path="res://spritesheet_flystate.png" id="2_hpkou"]
[ext_resource type="Texture2D" uid="uid://dplpj8ap7ruj7" path="res://spritesheet land.png" id="2_wob8e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fxrso"]
atlas = ExtResource("2_hpkou")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_80mnv"]
atlas = ExtResource("2_hpkou")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4upr7"]
atlas = ExtResource("2_hpkou")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3scad"]
atlas = ExtResource("2_hpkou")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv0n7"]
atlas = ExtResource("2_hpkou")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu6vg"]
atlas = ExtResource("2_hpkou")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wea2m"]
atlas = ExtResource("2_hpkou")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_67h3e"]
atlas = ExtResource("2_hpkou")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_84uoe"]
atlas = ExtResource("2_hpkou")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjave"]
atlas = ExtResource("2_wob8e")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4or0"]
atlas = ExtResource("2_wob8e")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tyti"]
atlas = ExtResource("2_wob8e")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg4hu"]
atlas = ExtResource("2_wob8e")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w1bc"]
atlas = ExtResource("2_wob8e")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2i72"]
atlas = ExtResource("2_wob8e")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6tm7"]
atlas = ExtResource("2_eyvl2")
region = Rect2(0, 0, 258, 258)

[sub_resource type="AtlasTexture" id="AtlasTexture_ld3ie"]
atlas = ExtResource("2_eyvl2")
region = Rect2(0, 258, 258, 258)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5xhi"]
atlas = ExtResource("2_eyvl2")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmg7e"]
atlas = ExtResource("2_eyvl2")
region = Rect2(256, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_hw111"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxrso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80mnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4upr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3scad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv0n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu6vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wea2m")
}],
"loop": true,
"name": &"fly",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_67h3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84uoe")
}],
"loop": true,
"name": &"fly_idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjave")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4or0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tyti")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg4hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w1bc")
}],
"loop": true,
"name": &"run_idle",
"speed": 1.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2i72")
}],
"loop": true,
"name": &"run_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6tm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ld3ie")
}],
"loop": true,
"name": &"swim",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5xhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmg7e")
}],
"loop": true,
"name": &"swim_idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wy5bg"]
radius = 60.8276

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m0j7v"]
bg_color = Color(0.6, 0, 0, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aebn2"]
bg_color = Color(0.06, 0.6, 0, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="Alien" type="CharacterBody2D"]
scale = Vector2(0.4, 0.4)
script = ExtResource("1_qk2m3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-5, 27.5)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_hw111")
animation = &"fly"
frame_progress = 0.591916

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.52588e-05)
shape = SubResource("CircleShape2D_wy5bg")

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(900, 80)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -450.0
offset_right = 450.0
offset_bottom = -423.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_m0j7v")
theme_override_styles/fill = SubResource("StyleBoxFlat_aebn2")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -450.0
offset_top = -760.0
offset_right = 450.0
offset_bottom = -510.0
theme_override_font_sizes/font_size = 200
text = "text"
horizontal_alignment = 1

[node name="ChangeTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0

[node name="DashTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.15
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1.52588e-05)
shape = SubResource("CircleShape2D_wy5bg")

[connection signal="timeout" from="ChangeTimer" to="." method="change_state"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="got_spiked"]
